# movie-night-client

./: Cargo.toml
src/: main.rs  message.rs  messenger.rs  route.rs  router.rs
src/model/: mod.rs
src/widgets/: mod.rs
