[package]
name = "movies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.9.0", features = ["image", "tokio"] }
iced_native = "0.10.3"
json = "0.12.4"
tokio = { version = "1.28.0", features = ["rt", "macros"] }
